# embedded-audio-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  configure.sh  requirements.txt
.github/workflows/: build-linux-x86.yml  ci.yml  docker-image.yml  test.yml
docker/: docker-build.bat  docker-build.sh  docker-exec.sh  docker-run-cmd.sh  docker-run.bat  docker-run.sh  docker-setup.sh
prototype/: play_audio.py  record_audio.py
samples/: midi_c_major_monophonic.mid
scripts/: alsa_devices.py  midi_input.py  play_audio.py
src/: CMakeLists.txt  main.cpp
src/audioengine/: CMakeLists.txt
src/audioengine/include/: audiodevice.h  audioengine.h  audiosource.h
src/audioengine/src/: audioengine.cpp
src/devicemanager/: CMakeLists.txt
src/devicemanager/include/: devicemanager.h
src/devicemanager/src/: devicemanager.cpp
src/filemanager/include/: filemanager.h  midifile.h
src/filemanager/src/: filemanager.cpp  wavfile.cpp
src/filesystem/: CMakeLists.txt
src/filesystem/include/: filesystem.h  midifile.h  wavfile.h
src/filesystem/src/: filesystem.cpp  wavfile.cpp
src/framework/: CMakeLists.txt
src/framework/include/: engine.h  input.h  logger.h  messagequeue.h  resourceengine.h  subject.h  threadedengine.h
src/framework/src/: alsa_utils.cpp
src/include/: messagequeue.h  subject.h
src/midiengine/: CMakeLists.txt
src/midiengine/include/: midiengine.h  miditypes.h
src/midiengine/src/: midiengine.cpp
src/trackmanager/: CMakeLists.txt
src/trackmanager/include/: track.h  trackmanager.h
src/trackmanager/src/: track.cpp  trackmanager.cpp
tests/: CMakeLists.txt  test_filesystem_unit.cpp  test_track_unit.cpp  test_trackmanager_integration.cpp
tests/integration/: CMakeLists.txt  test_audio_input_integration.cpp  test_midi_input_integration.cpp  test_trackmanager_integration.cpp
tests/unit/: CMakeLists.txt  test_audioengine_unit.cpp  test_devicemanager_unit.cpp  test_filemanager_unit.cpp  test_filesystem_unit.cpp  test_track_unit.cpp  test_trackmanager_unit.cpp
